--- a/src/Style/styles.css
+++ b/src/Style/styles.css
@@ -1,127 +1,115 @@
 .app {
-    font-family: sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    font-size: 20px;
-    gap: 20px;
-    height: 100vh;
-    font-family: sans-serif;
-    background-color: #f8f9fd;
-  }
-  
-  input[type="text"],
-  input[type="password"] {
-    height: 40px;
-    font-size: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-  }
-  
-  input[type="submit"] {
-    margin-top: 10px;
-    cursor: pointer;
-    font-size: 15px;
-    width: 96%;
-    background: #2c9ad9;
-    border: 1px solid #2c9ad9;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-  }
-  
-  input[type="submit"]:hover {
-    background: #0f3e59;
-  }
-  
-  input[type="password"]{
-      margin-bottom: 10px;
-  }
+  font-family: sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 20px;
+  gap: 20px;
+  height: 100vh;
+  font-family: sans-serif;
+  background-color: #f8f9fd;
+}
 
-  .button-container {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .login-form {
-    position: absolute;
-    width: 400px;
-    height:320px;
-    border-radius: 10px;
-    background-color: white;
-    padding: 2rem;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    top: 4rem;
-    right: 20%;
-  }
-  
-  .list-container {
-    display: flex;
-  }
-  
-  .error {
-    color: red;
-    font-size: 12px;
-  }
-  
-  .title {
-    font-size: 25px;
-    margin-bottom: 20px;
-  }
-  
-  .input-container {
-    font-size: 18px;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    margin: 10px;
-  }
+input[type="text"],
+input[type="password"] {
+  height: 40px;
+  font-size: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
 
-  .signupButton{
-    margin-top: 50px;
-    cursor: pointer;
-    font-size: 15px;
-    width: 50%;
-    background: #2c9ad9;
-    border: 1px solid #2c9ad9;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
+input[type="submit"] {
+  margin-top: 10px;
+  cursor: pointer;
+  font-size: 15px;
+  width: 96%;
+  background: #2c9ad9;
+  border: 1px solid #2c9ad9;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
 
-  }
+input[type="submit"]:hover {
+  background: #0f3e59;
+}
 
-  .signupButton:hover{
-    background: #5095c9;
-  }
+input[type="password"] {
+  margin-bottom: 10px;
+}
 
-  .forgotPassword>a{
-    font-size: 17px;
-    color: #008acf;
-    position: relative;
-    left:33%;
-    top:10px;
-    text-decoration:none
-  }
+.button-container {
+  display: flex;
+  justify-content: center;
+}
 
-  .forgotPassword>a:hover{
-      text-decoration: underline;
-  }
+.login-form {
+  position: absolute;
+  width: 400px;
+  height: 380px;
+  border-radius: 10px;
+  background-color: white;
+  padding: 2rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  top: 4rem;
+  right: 20%;
+}
 
-  .slogan{
-    position: absolute;
-    left: 20%;
-    top:20%;
-  }
+.list-container {
+  display: flex;
+}
 
-  .sloganTitle{
-    color: #2c9ad9;
-    font-size: 50px;
-    font-weight: bold;
-  }
+.error {
+  color: red;
+  font-size: 12px;
+}
 
-  .sloganStatement{
-    position: absolute;
-    bottom: -40px;
-    font-size: 25px;
-  }
+.title {
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
+.input-container {
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin: 10px;
+}
+
+.forgotPassword > a {
+  font-size: 17px;
+  color: #008acf;
+  position: relative;
+  left: 33%;
+  top: 10px;
+  text-decoration: none;
+  padding-bottom: 20px;
+}
+
+.forgotPassword > a:hover {
+  text-decoration: underline;
+}
+
+.slogan {
+  position: absolute;
+  left: 20%;
+  top: 20%;
+}
+
+.sloganTitle {
+  color: #2c9ad9;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.sloganStatement {
+  position: absolute;
+  bottom: -40px;
+  font-size: 25px;
+}
+
+input[type="text"] > .mb-3 {
+  width: 10px;
+}
