--- a/src/Style/styles.css
+++ b/src/Style/styles.css
@@ -11,12 +11,14 @@
   background-color: #f8f9fd;
 }
 
-input[type="text"],
+input[type="email"],
 input[type="password"] {
   height: 40px;
   font-size: 20px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
 }
 
 input[type="submit"] {
@@ -24,15 +26,9 @@ input[type="submit"] {
   cursor: pointer;
   font-size: 15px;
   width: 96%;
-  background: #2c9ad9;
-  border: 1px solid #2c9ad9;
   color: #fff;
   padding: 10px 20px;
   border-radius: 5px;
-}
-
-input[type="submit"]:hover {
-  background: #0f3e59;
 }
 
 input[type="password"] {
@@ -47,7 +43,7 @@ input[type="password"] {
 .login-form {
   position: absolute;
   width: 400px;
-  height: 380px;
+  height: 420px;
   border-radius: 10px;
   background-color: white;
   padding: 2rem;
@@ -80,7 +76,7 @@ input[type="password"] {
 
 .forgotPassword > a {
   font-size: 17px;
-  color: #008acf;
+  color: #0d6efd;
   position: relative;
   left: 33%;
   top: 10px;
@@ -99,7 +95,7 @@ input[type="password"] {
 }
 
 .sloganTitle {
-  color: #2c9ad9;
+  color: #0d6efd;
   font-size: 50px;
   font-weight: bold;
 }
@@ -112,4 +108,9 @@ input[type="password"] {
 
 input[type="text"] > .mb-3 {
   width: 10px;
+}
+
+.signUp:hover {
+  background-color: #246d15;
+  border-color: #246d15;
 }
